Implement front-end for factorializing.

--- a/factorial.html
+++ b/factorial.html
@@ -12,11 +12,13 @@
       <h3>Factorial</h3>
       <form id="factorial_input">
         <div class="form-group">
-          <input type="text">
+          <input type="text" id="bob" placeholder="Enter a number to factorial">
         </div>
+        <button type="submit" class="btn">Factorialize!</button>
       </form>
-
+      <div id="result">
+        <p>The factorial of <span class="bob"></span> is <span class="factorialized"></span></p>
+      </div>
     </div>
-
   </body>
 </html>
