--- a/factorial.html
+++ b/factorial.html
@@ -6,6 +6,8 @@
     <script src="js/jquery-1.11.3.js"></script>
     <script src="js/scripts.js"></script>
     <title>Factorial</title>
+    <img src="http://4.bp.blogspot.com/-zkvu-BGlvRo/T6YvyN1KUlI/AAAAAAAAAJ8/HlO62X53h98/s1600/logo-factorial.png" alt="" />
+
   </head>
   <body>
     <div class="container">
